<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>eve</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>EVE Multi-Module Project</name>
    <description>A multi-module Maven project demonstrating Avaje Inject dependency injection</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <avaje.version>10.1</avaje.version>
        <slf4j.version>2.0.13</slf4j.version>
    </properties>

    <modules>
        <module>engine-api</module>
        <module>engine-core</module>
        <module>example-plugin</module>
        <module>engine-dist</module>
        <module>application</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.avaje</groupId>
                    <artifactId>avaje-inject-maven-plugin</artifactId>
                    <version>${avaje.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.avaje</groupId>
                <artifactId>avaje-inject</artifactId>
                <version>${avaje.version}</version>
            </dependency>
            <dependency>
                <groupId>io.avaje</groupId>
                <artifactId>avaje-inject-events</artifactId>
                <version>${avaje.version}</version>
            </dependency>
            <dependency>
                <groupId>io.avaje</groupId>
                <artifactId>avaje-inject-generator</artifactId>
                <version>${avaje.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jul-to-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>